<?xml version="1.0"?>
<package format="2">
  <name>cloud_to_gridmap</name>
  <version>0.0.0</version>
  <description>The cloud_to_gridmap package</description>

  <maintainer email="haebum@todo.todo">haebum</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>pcl_ros</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
